Enumeration Dropdowns with Spring MVC and Thymeleaf